# s3logs-parquet

./: Cargo.toml  FAQ.md  README.md
s3log-lambda-aggregator/: Cargo.toml  README.md
s3log-lambda-aggregator/src/: main.rs
s3log-lambda-transformer/: Cargo.toml  README.md
s3log-lambda-transformer/src/: main.rs
s3logd/: Cargo.toml  README.md
s3logd-stream/: Cargo.toml  README.md  example.ini
s3logd-stream/src/: arrow_async.rs  conf.rs  delta.rs  main.rs  mon.rs  output.rs  receipt.rs  transfer.rs  utils.rs
s3logd/config/: example.ini
s3logd/src/: main.rs
s3logs/: Cargo.toml  README.md
s3logs/config/: parquet.schema  parquet_writer_properties.ini
s3logs/src/: conf.rs  lib.rs  main.rs  stats.rs  transfer.rs  utils.rs
scripts/: transform.sh
scripts/loggen/: conf.py  s3loggen.py
