[package]
name = "s3log_lambda_transformer"
version = "0.3.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.7"
aws_lambda_events = "0.7.2"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "tracing-log"] }
serde = { version = "1.0.147", features = ["derive"] }
s3logs = { version = "0.3.0", path = "../s3logs" }
