[package]
name = "s3logd"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
aws-config = "0.51.0"
aws-sdk-sqs = "0.21.0"
aws_lambda_events = "0.7.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
futures = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
config = "0.13.2"
daemonize = "0.5.0"
ctrlc = { version = "3.2.3", features = ["termination"] }
env_logger = "0.9.1"
log = "0.4.17"
flexi_logger = { version = "0.27.2", features = ["async", "compress"] }
deadqueue = "0.2.4"
s3logs = { version = "0.3.0", path = "../s3logs" }
