[package]
name = "s3logs"
version = "0.3.0"
edition = "2021"
authors = [
    "daiyy <dyiyang@amazon.com>",
    "Guo Feng <fengguo@amazon.com>",
    "Jiang Qi <qjaws@amazon.com>",
    "Li Zhixuan <leonlzx@amazon.com>"
]
license = "Apache-2.0"
keywords = ["AWS", "S3", "access log"]
description = "A Rust implementation for AWS S3 server access log Extract and Transform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
aws-smithy-http = "0.51.0"
log = "0.4.17"
env_logger = "0.9.1"
serde = "1.0.136"
serde_json = "1.0.81"
fs4 = { version = "0.6.2", features = ["tokio-async"] }
regex = "1.6.0"
chrono = "0.4.23"
tzif = "0.2.0"
tokio = { version = "1", features = ["macros", "fs", "io-util", "rt-multi-thread"] }
arrow = { version = "26.0.0", features = ["prettyprint"] }
parquet = "26.0.0"
flate2 = "1.0.24"
rand = "0.8.5"
structopt = "0.3.26"
config = "0.13.2"
pcre2 = "0.2.3"
libc = "0.2.137"
concat-reader = "0.1.0"
memory-stats = "1.0.0"

[lib]
name = "s3logs"
path = "src/lib.rs"

[[bin]]
name = "s3logs"
path = "src/main.rs"
